<resources>
    <string name="app_name">Briller</string>
    <string name="app_tag_line">shine on life.</string>

    <string name="onboarding_welcome_screen_quote_1">\"Habits become values. Values become destiny.\"\n - Gandhi</string>
    <string name="onboarding_select_partner_screen_title">Choose your accountability partner...</string>
    <string name="onboarding_selected_partner_screen_title">What\'s my name?</string>

    <string name="dog_name">Ollie</string>
    <string name="cat_name">Nala</string>

    <string name="onboarding_instruction_title_0">One Step at a Time.</string>
    <string name="onboarding_instruction_title_1">Set Goals, Earn Stars.</string>
    <string name="onboarding_instruction_title_2">Unlock Tricks and Skins.</string>
    <string name="onboarding_instruction_title_3">Let\'s Get Started!</string>
    <string name="onboarding_instruction_finish">Continue</string>

    <string name="main_activity_home">home</string>
    <string name="main_activity_home_icon_description">Home</string>
    <string name="main_activity_stats_icon_description">Stats</string>
    <string name="main_activity_pethouse_icon_description">Pethouse</string>

    <string name="stats_fragment_title">Achievement Stats</string>
    <string name="stats_fragment_progress_bar_tooltip_1">Accomplishment Rate</string>
    <string name="stats_fragment_progress_bar_tooltip_2">Habits Completed</string>

    <string name="habit_add">+ Add Habit</string>

    <string name="habit_choose">Select Habit Type</string>
    <string name="habit_physique">Physique</string>
    <string name="habit_mind">Mind</string>

    <string name="habit_physique_gym">Gym</string>
    <string name="habit_physique_run">Run</string>
    <string name="habit_physique_pushup">Pushups</string>
    <string name="habit_physique_squat">Squats</string>

    <string name="habit_mind_meditate">Meditate</string>
    <string name="habit_mind_read">Read</string>
    <string name="habit_mind_journal">Journal</string>
    <string name="habit_mind_study">Study</string>

    <string name="stampcard_title">Habit Stampcard</string>
    <string name="stampcard_time">Time:</string>
    <string name="stampcard_time_minutes">minutes</string>
    <string name="stampcard_duration">Duration:</string>
    <string name="stampcard_frequency_daily">Daily</string>
    <string name="stampcard_set">Set</string>

    <string name="pethouse_skin_title">Skins</string>
    <string name="pethouse_skin_active">Active</string>
    <string name="pethouse_skin_select">Select</string>
    <string name="pethouse_skin_ollie_1">Good ol\' Ollie. Dogs are like that, I guess. They know how to fix you, all without saying a word.</string>
    <string name="pethouse_skin_ollie_superman">Superman Ollie. Your most trusty companion, now with a cape.</string>
    <string name="pethouse_skin_ollie_superman_unlock">Unlocked with a 7 day streak</string>

</resources>
