<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.goats.briller.main.ui.home.HomeFragment"
        android:label="@string/main_activity_home_icon_description"
        tools:layout="@layout/main_fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.goats.briller.main.ui.stats.StatsFragment"
        android:label="@string/main_activity_stats_icon_description"
        tools:layout="@layout/main_fragment_stats" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.goats.briller.main.ui.pethouse.PethouseFragment"
        android:label="@string/main_activity_pethouse_icon_description"
        tools:layout="@layout/main_fragment_pethouse" />
</navigation>
