<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/app_background">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/item_habit"
        >

        <TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <ImageButton
                    android:id="@+id/habit_choose_back_button"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"

                    android:background="@drawable/app_back_button"
                    android:scaleType="fitXY"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/habit_choose"
                    android:textSize="@dimen/textview_big_0_size"
                    />

            </LinearLayout>

        </TableRow>

        <TableRow>

            <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@color/generic_button">

                <TextView
                    android:id="@+id/stampcard_time_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/stampcard_time" />

                <android.support.design.widget.TextInputEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/stampcard_time_title"
                    app:layout_constraintRight_toLeftOf="@id/stampcard_time_edit_button"
                    android:inputType="number" />

                <ImageButton
                    android:id="@+id/stampcard_time_edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:src="@drawable/stampcard_parameter_edit"
                    android:background="@null" />

            </android.support.constraint.ConstraintLayout>

        </TableRow>

        <TableRow>

            <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@color/generic_button">

                <TextView
                    android:id="@+id/stampcard_frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/stampcard_frequency_daily" />

                <ImageButton
                    android:id="@+id/stampcard_frequency_edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:src="@drawable/stampcard_frequency_dropdown"
                    android:background="@null" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@color/generic_button">

                <ImageView
                    android:id="@+id/stampcard_alarm_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/stampcard_alarm" />

                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/stampcard_alarm_icon"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/stampcard_progress"
                android:text="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/stampcard_progress"
                android:text="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/stampcard_progress"
                android:text="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/stampcard_progress"
                android:text="4" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/stampcard_progress"
                android:text="5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/stampcard_progress"
                android:text="6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/stampcard_progress"
                android:text="3" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/stampcard_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/generic_button"
                android:text="@string/stampcard_set" />

        </TableRow>

    </TableLayout>

</LinearLayout>